Some more fixes

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,6 +46,7 @@
 		},
 		// Jest
 		"jest": {
+			"autoRun": "off",
 			"showTerminalOnLaunch": false,
 			"showCoverageOnLoad": true,
 			"coverageFormatter": "GutterFormatter"
