--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.2",
     "@types/video.js": "^7.3.30",
+    "@types/wavesurfer.js": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
